[package]
name = "utf7-imap"
version = "0.1.0"
authors = ["Ilya Medvedev <ilya@medvedev.im>"]
license = "MIT"
repository = "https://github.com/iam-medvedev/rust-utf7-imap"
description = "Mailbox names decoder (UTF-7 IMAP RFC3501)"
keywords = ["mailbox", "decoder", "utf-7", "utf7", "imap", "rfc3501", "rfc 3501"]
categories = ["parsing","encoding"]
readme = "README.md"
maintenance = { status = "experimental" }

[dependencies]
regex = "1.5"
base64 = "0.13"
encoding_rs = "0.8"
