[package]
name = "utf7-imap"
version = "0.3.1"
authors = ["Ilya Medvedev <ilya@medvedev.im>", "Olivier ROLAND <newca12@users.noreply.github.com>"]
license = "MIT"
homepage = "https://github.com/iam-medvedev/rust-utf7-imap"
repository = "https://github.com/iam-medvedev/rust-utf7-imap"
description = "Mailbox names encoder and decoder (UTF-7 IMAP RFC 3501)"
keywords = ["mailbox", "decoder", "utf7", "imap", "rfc3501"]
categories = ["parsing","encoding"]
readme = "README.md"
maintenance = { status = "passively-maintained" }

[dependencies]
regex = "1.5"
base64 = "0.13"
encoding_rs = "0.8"
